--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -33,7 +33,8 @@
           <p><%= event.description %></p>
 
             <% if(event.event_open) %>
-              <%= link_to("Buy Tickets", event.event_page_url, html_options = {:class => "btn btn-primary col-md-5"})%>
+              <a class="btn btn-primary col-md-5" href=<%="#{event.event_page_url}"%> >Buy Tickets</a>
+              <%#= link_to("Buy Tickets", event.event_page_url, html_options = {:class => "btn btn-primary col-md-5"})%>
             <% end %>
         </div>
       </div>
