--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,7 +8,7 @@
 
       <%if purchase_true?%>
       <div class="purchase-link-mobile">
-        <%= link_to("Purchase Tickets", "https://www.eventjoy.com/e/wearegreeks", html_options = {class: "btn btn-warning btn-block"}) %>
+        <%= link_to("Purchase Tickets", events_path, html_options = {class: "btn btn-warning btn-block"}) %>
       </div>
       <% end %>
       <br>
