--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -8,8 +8,8 @@
   <body>
     <div class="video-wrapper">
       <video autoplay id="load-vid">
-        <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/We+Are+Greeks+Promo.mp4" type="video/mp4">
-        <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/We+Are+Greeks+Promo.ogg" type="video/ogg">
+        <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/CityHabitsWith%2BGLitches.mp4" type="video/mp4">
+        <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/CityHabitsWith_GLitches.ogv" type="video/ogg">
       </video>
     </div>
   </body>
