--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,7 +2,7 @@
   <div id="main-vid">
     <%if is_mobile? %>
       <video autoplay poster="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/vlcsnap_2014_11_25_14h40m28s92.png" id="load-vid-mobile">
-        <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/Heart+Break+Kids+--+SF+State+Rager.mp4" type="video/mp4">
+        <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/We+Are+Greek+Recap+(Final+Cut4).mp4" type="video/mp4">
         <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/Heart_Break_Kids_SF_State_Rager.ogv" type="video/ogg">
       </video>
 
