We Are Greeks video

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
       <br>
     <% else %>
       <video autoplay loop muted poster="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/vlcsnap_2014_11_25_14h40m28s92.png" id="bgvid">
-          <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/Heart+Break+Kids+--+SF+State+Rager.mp4" type="video/mp4">
+          <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/We+Are+Greek+Recap+(Final+Cut4).mp4" type="video/mp4">
           <source src="https://s3-us-west-1.amazonaws.com/cityhabits1/cityhabits/Heart_Break_Kids_SF_State_Rager.ogv" type="video/ogg">
       </video>
       <div class="text-vertical-center ">
